--- a/app/base/kustomization.yaml
+++ b/app/base/kustomization.yaml
@@ -7,3 +7,13 @@ kind: Kustomization
 images:
 - name: example-registry-quay-quay-registry.apps.cluster-n2gmg.n2gmg.sandbox1085.opentlc.com/admin/camel-rest-sample
   newTag: 0234c71
+patchesJson6902:
+- patch: |-
+    - op: add
+      path: /metadata/labels/testkey
+      value: testvalue
+  target:
+    group: apps
+    kind: Deployment
+    name: camel-rest-sample
+    version: v1
