--- a/app/base/kustomization.yaml
+++ b/app/base/kustomization.yaml
@@ -4,16 +4,16 @@ resources:
 - route.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-images:
-- name: example-registry-quay-quay-registry.apps.cluster-n2gmg.n2gmg.sandbox1085.opentlc.com/admin/camel-rest-sample
-  newTag: 0234c71
 patchesJson6902:
 - patch: |-
     - op: add
-      path: /metadata/labels/testkey
-      value: testvalue
+      path: /metadata/labels/testkey1
+      value: testvalue1
   target:
     group: apps
     kind: Deployment
     name: camel-rest-sample
     version: v1
+images:
+- name: example-registry-quay-quay-registry.apps.cluster-n2gmg.n2gmg.sandbox1085.opentlc.com/admin/camel-rest-sample
+  newTag: 0234c71
