--- a/tasks/ClusterTask-Buildah.yaml
+++ b/tasks/ClusterTask-Buildah.yaml
@@ -43,10 +43,48 @@ metadata:
       /tekton/results/IMAGE_DIGEST"}],"volumes":[{"emptyDir":{},"name":"varlibcontainers"}],"workspaces":[{"name":"source"}]}}
     tekton.dev/pipelines.minVersion: '0.19'
     tekton.dev/tags: image-build
-  labels:
-    app.kubernetes.io/version: '0.1'
-    operator.tekton.dev/provider-type: redhat
+  selfLink: /apis/tekton.dev/v1beta1/namespaces/pipelines/tasks/buildah
+  resourceVersion: '2703212'
   name: buildah
+  uid: f7ad59d9-d6d8-4312-9174-f0f6d000ed14
+  creationTimestamp: '2022-08-18T17:04:56Z'
+  generation: 1
+  managedFields:
+    - apiVersion: tekton.dev/v1beta1
+      fieldsType: FieldsV1
+      fieldsV1:
+        'f:metadata':
+          'f:annotations':
+            .: {}
+            'f:kubectl.kubernetes.io/last-applied-configuration': {}
+            'f:tekton.dev/pipelines.minVersion': {}
+            'f:tekton.dev/tags': {}
+          'f:labels':
+            .: {}
+            'f:app.kubernetes.io/version': {}
+            'f:operator.tekton.dev/provider-type': {}
+          'f:ownerReferences':
+            .: {}
+            'k:{"uid":"5c6c20fc-7c33-46e0-91f3-0d3d78ee7af7"}':
+              .: {}
+              'f:apiVersion': {}
+              'f:blockOwnerDeletion': {}
+              'f:controller': {}
+              'f:kind': {}
+              'f:name': {}
+              'f:uid': {}
+        'f:spec':
+          .: {}
+          'f:description': {}
+          'f:params': {}
+          'f:results': {}
+          'f:steps': {}
+          'f:volumes': {}
+          'f:workspaces': {}
+      manager: Mozilla
+      operation: Update
+      time: '2022-08-18T17:04:56Z'
+  namespace: pipelines
   ownerReferences:
     - apiVersion: operator.tekton.dev/v1alpha1
       blockOwnerDeletion: true
@@ -54,9 +92,9 @@ metadata:
       kind: TektonAddon
       name: addon
       uid: 5c6c20fc-7c33-46e0-91f3-0d3d78ee7af7
-  resourceVersion: '678434'
-  selfLink: /apis/tekton.dev/v1beta1/clustertasks/buildah
-  uid: ec464a7e-337f-4c8e-91ed-726dc18850a8
+  labels:
+    app.kubernetes.io/version: '0.1'
+    operator.tekton.dev/provider-type: redhat
 spec:
   description: >-
     Buildah task builds source into a container image and then pushes it to a
