--- a/tasks/ClusterTask-gitClone.yaml
+++ b/tasks/ClusterTask-gitClone.yaml
@@ -76,10 +76,48 @@ metadata:
     tekton.dev/displayName: git clone
     tekton.dev/pipelines.minVersion: 0.21.0
     tekton.dev/tags: git
-  labels:
-    app.kubernetes.io/version: '0.3'
-    operator.tekton.dev/provider-type: redhat
+  selfLink: /apis/tekton.dev/v1beta1/namespaces/pipelines/tasks/git-clone
+  resourceVersion: '3440492'
   name: git-clone
+  uid: 2d897533-c575-4870-adeb-275f3279c57d
+  creationTimestamp: '2022-08-18T17:05:29Z'
+  generation: 3
+  managedFields:
+    - apiVersion: tekton.dev/v1beta1
+      fieldsType: FieldsV1
+      fieldsV1:
+        'f:metadata':
+          'f:annotations':
+            .: {}
+            'f:kubectl.kubernetes.io/last-applied-configuration': {}
+            'f:tekton.dev/displayName': {}
+            'f:tekton.dev/pipelines.minVersion': {}
+            'f:tekton.dev/tags': {}
+          'f:labels':
+            .: {}
+            'f:app.kubernetes.io/version': {}
+            'f:operator.tekton.dev/provider-type': {}
+          'f:ownerReferences':
+            .: {}
+            'k:{"uid":"5c6c20fc-7c33-46e0-91f3-0d3d78ee7af7"}':
+              .: {}
+              'f:apiVersion': {}
+              'f:blockOwnerDeletion': {}
+              'f:controller': {}
+              'f:kind': {}
+              'f:name': {}
+              'f:uid': {}
+        'f:spec':
+          .: {}
+          'f:description': {}
+          'f:params': {}
+          'f:results': {}
+          'f:steps': {}
+          'f:workspaces': {}
+      manager: Mozilla
+      operation: Update
+      time: '2022-08-18T17:05:29Z'
+  namespace: pipelines
   ownerReferences:
     - apiVersion: operator.tekton.dev/v1alpha1
       blockOwnerDeletion: true
@@ -87,9 +125,9 @@ metadata:
       kind: TektonAddon
       name: addon
       uid: 5c6c20fc-7c33-46e0-91f3-0d3d78ee7af7
-  resourceVersion: '643458'
-  selfLink: /apis/tekton.dev/v1beta1/clustertasks/git-clone
-  uid: e147c07c-05a0-46aa-aa03-ac0402aaeb72
+  labels:
+    app.kubernetes.io/version: '0.3'
+    operator.tekton.dev/provider-type: redhat
 spec:
   description: >-
     These Tasks are Git tasks to work with repositories used by other tasks in
