--- a/app/base/deployment.yaml
+++ b/app/base/deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: camel-rest-sample
     spec:
       containers:
-      - image: sample 
+      - image: example-registry-quay-quay-registry.apps.cluster-n2gmg.n2gmg.sandbox1085.opentlc.com/admin/camel-rest-sample:latest
         imagePullPolicy: Always
         name: camel-rest-sample
         ports:
