--- a/app/overlays/PROD/kustomization.yaml
+++ b/app/overlays/PROD/kustomization.yaml
@@ -1,4 +1,10 @@
-bases:
-- ../../base
 patchesStrategicMerge:
 - deployment.yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+resources:
+- ../../base
+images:
+- name: example-registry-quay-quay-registry.apps.cluster-n2gmg.n2gmg.sandbox1085.opentlc.com/admin/camel-rest-sample
+  newName: example-registry-quay-quay-registry.apps.cluster-n2gmg.n2gmg.sandbox1085.opentlc.com/production-fuse/camel-rest-sample
+  newTag: 8ea197c
